# bazel-jan-2026

./: README.md
day1/: README.md
day1/lab1/: Makefile
day1/lab1/src/: hello.cpp
day1/lab2/: Makefile  dialog.cpp  dialog.h  lab2  lab2.pro  main.cpp  moc_dialog.cpp
day1/lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  main.cpp
day1/lab4/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  conanfile.txt  hello.h  hello_test.cpp
day1/lab5/: BUILD  MODULE.bazel
day1/lab6/: MODULE.bazel
day1/lab6/api/: BUILD  hello.h
day1/lab6/app/: BUILD  main.cpp
day1/lab6/lib/: BUILD  hello.cpp
day2/: README.md
day2/bazel-fetch-dependencies-from-jfrog/: BUILD.bazel  MODULE.bazel  bazel-bazel-fetch-dependencies-from-jfrog  bazel-bin  bazel-out  bazel-testlogs  fetch_hello_lib.bzl
day2/bazel-fetch-dependencies-from-jfrog/app/: BUILD.bazel
day2/bazel-fetch-dependencies-from-jfrog/app/src/: main.cpp
day2/bazel-fetch-dependencies-from-jfrog/lib/: BUILD.bazel
day2/bazel-fetch-dependencies-from-jfrog/tools/: BUILD.bazel  deploy.sh  generate-sha256.sh  hello_lib_ext.bzl  status.sh
day2/bazel-jfrog-integration/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  bazel-bazel-jfrog-integration  bazel-bin  bazel-out  bazel-testlogs  release.sh
day2/bazel-jfrog-integration/src/: main.cpp
day2/bazel-jfrog-integration/tools/: status.sh
day2/gtest-demo/: MODULE.bazel
day2/gtest-demo/app/: BUILD.bazel
day2/gtest-demo/app/src/: hello.cpp  main.cpp
day2/gtest-demo/lib/: BUILD.bazel
day2/gtest-demo/test/: BUILD.bazel
(+5 files in other folders)
