# Load the rules explicitly
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

# Build the binary
cc_binary(
    name = "myapp",
    srcs = ["main.cpp"],
)

# Optional version file
genrule(
    name = "version_file",
    outs = ["version.txt"],
    cmd = "echo 1.2.3 > $@",
    stamp = 1,
)

# Package the binary
pkg_tar(
    name = "myapp_release",
    srcs = [
        ":myapp",
        ":version_file",
    ],
    package_dir = "/usr/bin",
    stamp = 1,
)

